Added elevenlabs support.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # OpenAI API key (required for parser, jury agents, foreperson)
-OPENAI_API_KEY=sk-your-key-here
+OPENAI_API_KEY=your-openai-key
+
+# ElevenLabs API key (optional, for text-to-speech in interactive mode)
+ELEVENLABS_API_KEY=your-elevenlabs-key
