Updated temperature in models

--- a/config.yaml
+++ b/config.yaml
@@ -32,11 +32,19 @@ foreperson:
     - axis: context_sufficiency
       question: "Are key caveats, qualifiers, or denominators reflected or not contradicted?"
 
-models:
-  parser: "gpt-4.1-mini"
-  agents: "gpt-4.1-mini"
-  debate_status: "gpt-4.1-mini"
-  foreperson: "gpt-4.1-mini"
+components:
+  parser:
+    model: "gpt-4.1-mini"
+    temperature: 0.2
+  agents:
+    model: "gpt-4.1-mini"
+    temperature: 0.2
+  debate_status:
+    model: "gpt-4.1-mini"
+    temperature: 0.2
+  foreperson:
+    model: "gpt-4.1-mini"
+    temperature: 0.2
 
 interactive: true  # show parse, votes, debate, verdict as they stream
 
