--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "langchain",
+    "langchain-community",
     "langchain-openai",
     "langgraph",
     "PyYAML",
